<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_accept_as_friend"
        android:title="@string/chat_add_friend_menu_item"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_block"
        android:title="@string/chat_block_user"
        android:icon="@drawable/baseline_close_24" />
    
    <item
        android:id="@+id/action_unblock"
        android:title="@string/chat_unblock_user"
        android:icon="@drawable/baseline_check_24"
        android:visible="false" />

    <item
        android:id="@+id/action_clear_chat"
        android:title="@string/chat_clearchat_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_chat"
        android:title="@string/chat_deletechat_action"
        app:showAsAction="never" />
</menu>

